--- a/libs/common/less/components/calendar.less
+++ b/libs/common/less/components/calendar.less
@@ -3,7 +3,7 @@
 .com-calendar {
 
     .selects {
-        height: @cm-form-line-height;
+        height: @cm-form-field-height;
 
         .months {
             width: 49%;
