--- a/libs/common/less/components/gallery.less
+++ b/libs/common/less/components/gallery.less
@@ -124,7 +124,7 @@
     height: 20px;
     float: right;
     padding: 0 26px 0 0;
-    background: url(../../img/components/gallery-close.png) 100% 100% no-repeat;
+    background: url('@{cm-image-path}/components/gallery-close.png') 100% 100% no-repeat;
     line-height: 20px;
     color: #e51937;
     cursor: pointer;
@@ -185,7 +185,7 @@
 .com-gallery-viewer .loader-icon {
     width: 16px;
     height: 11px;
-    background: url(../../img/components/loader.gif);
+    background: url('@{cm-image-path}/components/loader.gif');
     position: absolute;
     top: 50%;
     left: 50%;
@@ -239,11 +239,11 @@
     margin: -25px 0 0 0;
 }
 .com-gallery-viewer .arrows-next .icon {
-    background: url(../../img/components/gallery-arrow-next.png) 0 0 no-repeat;
+    background: url('@{cm-image-path}/components/gallery-arrow-next.png') 0 0 no-repeat;
     right: 10px;
 }
 .com-gallery-viewer .arrows-prev .icon {
-    background: url(../../img/components/gallery-arrow-prev.png) 0 0 no-repeat;
+    background: url('@{cm-image-path}/components/gallery-arrow-prev.png') 0 0 no-repeat;
     left: 10px;
 }
 .com-gallery-viewer .arrows-next:hover,
