--- a/libs/common/less/variables.less
+++ b/libs/common/less/variables.less
@@ -4,12 +4,35 @@
 
 // /* ******* STYLING ******* */
 
+@cm-line-height: 16px;
+
 @cm-border-color: #CBCBCB;
 @cm-border-color-active: #C4DBEE;
 @cm-border-style: 1px solid @cm-border-color;
 
-@cm-form-line-height: 28px;
 @cm-block-padding: 24px;
 @cm-block-margin: @cm-block-padding;
 @cm-block-padding-small: 4px;
 @cm-border-radius: 3px;
+
+// /* ******* FORM ******* */
+
+@cm-form-field-height: 28px;
+@cm-form-field-indent: 16px;
+@cm-form-dt-width: 150px;
+@cm-form-inner-indent: @cm-form-field-indent / 2;
+
+@cm-button-indent: 8px;
+
+// /* ******* COMPONENTS ******* */
+
+// /* *** FILES LIST *** */
+
+@cm-files-list-count: 3;
+
+// /* *** TOOLBAR *** */
+
+@cm-toolbar-group-indent: @cm-form-field-indent;
+@cm-toolbar-item-indent: 4px;
+@cm-toolbar-medium: 140px;
+@cm-toolbar-large: 250px;
