--- a/libs/common/docs/less/index.less
+++ b/libs/common/docs/less/index.less
@@ -4,9 +4,10 @@
 /* ******* TAGS ******* */
 
 body {
-    padding: 24px;
+    padding: 0;
     margin: 0;
     font-family: arial, helvetica, sans-serif;
+    line-height: @cm-line-height;
     font-size: 13px;
 }
 h1, h2, h3, h4, p {
